[package]
edition = "2018"
name = "torus_trooper"
version = "0.1.0"
authors = ["Arnaud de Bossoreille <arnaud.debossoreille@gmail.com>"]

[dependencies]
bitflags = "1.0"
bulletml = { git = "https://github.com/arnodb/bulletml_rs.git" }
failure = "0.1"
image = "0.20"
lazy_static = "1.1"
piston = "0.38"
piston2d-opengl_graphics = "0.55"
preferences = "1.1"
rand = "0.5"
rand_core = "0.3"
rand_xorshift = "0.1"
rle_vec = "0.4"
sdl2 = { version = "0.32", features = ["mixer"] }
serde = "0.9"
serde_derive = "0.9"

glutin = { version = "0.18", optional = true }
pistoncore-glutin_window = { version = "0.50", optional = true }

pistoncore-sdl2_window = { version = "0.51", optional = true }

diff = { version = "0.1", optional = true }
serde_json = { version = "0.9", optional = true }

[build-dependencies]
gl_generator = "0.9"

[features]
default = ["glutin_backend"]
glutin_backend = ["glutin", "pistoncore-glutin_window"]
sdl_backend = ["pistoncore-sdl2_window"]
game_recorder = ["diff", "serde_json"]