[package]
edition = "2018"
name = "torus_trooper"
version = "0.1.0"
authors = ["Arnaud de Bossoreille <arnaud.debossoreille@gmail.com>"]

[dependencies]
bitflags = "1.0"
bulletml = { git = "https://github.com/arnodb/bulletml_rs.git" }
diff = { version = "0.1", optional = true }
failure = "0.1"
glutin = { version = "0.19", optional = true }
image = "0.21"
lazy_static = "1.1"
piston = "0.42"
piston2d-opengl_graphics = "0.59"
pistoncore-glutin_window = { version = "0.54", optional = true }
pistoncore-sdl2_window = { version = "0.55", optional = true }
preferences = { git = "https://github.com/Eh2406/preferences-rs.git", branch = "patch-1", revision = "4f426cf52da97d3b8914e10d4492f953d4304238" }
rand = "0.6"
rand_core = "0.4"
rand_xorshift = "0.1"
rle_vec = { version = "0.4", features = ["serialize"] }
sdl2 = { version = "0.32", features = ["mixer"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", optional = true }
structopt = "0.2"

[build-dependencies]
gl_generator = "0.10"

[features]
default = ["glutin_backend"]
glutin_backend = ["glutin", "pistoncore-glutin_window"]
sdl_backend = ["pistoncore-sdl2_window"]
game_recorder = ["diff", "serde_json"]